feat : 프로젝트 리펙토링